--- a/timing/CMakeLists.txt
+++ b/timing/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB tests_files "*.c")
 
 include_directories( ${CMAKE_SOURCE_DIR}/include )
 link_directories( ${CMAKE_BINARY_DIR}/lib )
-link_directories( ${QDWH_DIR}/lib )
+link_directories( ${POLAR_DIR}/lib )
 
 # Uses RUNPATH instead of RPATH
 #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--enable-new-dtags")
@@ -24,8 +24,7 @@ foreach( test_src ${tests_files} )
         add_dependencies( ${test_exe} NETLIB-SCALAPACK )
     endif()
 
-    target_link_libraries( ${test_exe} ${KSVD_LIBNAME}
-                                       qdwh
+    target_link_libraries( ${test_exe} ${KSVD_LIBNAME} polar
                                        ${MPI_C_LIBRARIES}
                                        ${ELPA_LIBRARIES}
                                        ${SLTMG_LIBRARIES}
@@ -36,19 +35,40 @@ foreach( test_src ${tests_files} )
                                        ${EXTRA_LIBS} )
     install( TARGETS ${test_exe} DESTINATION lib/timing )
 endforeach()
-if( ${NUMBER_OF_CPU} LESS 4 )
-    set( _p 1 )
-    set( _q 1 )
-elseif( ${NUMBER_OF_CPU} LESS 16 )
-    set( _p 2 )
-    set( _q 2 )
+if( ${CMAKE_HOST_SYSTEM_PROCESSOR} MATCHES "ppc")
+    # assume 8 threads per physical core
+    if( ${NUMBER_OF_CPU} GREATER 127 )
+        set( _p 4 )
+        set( _q 4 )
+    elseif( ${NUMBER_OF_CPU} GREATER 71 )
+        set( _p 3 )
+        set( _q 3 )
+    elseif( ${NUMBER_OF_CPU} GREATER 31 )
+        set( _p 2 )
+        set( _q 2 )
+    else()
+        set( _p 1 )
+        set( _q 1 )
+    endif()
 else()
-    set( _p 4 )
-    set( _q 4 )
+    # Assume 2 threads
+    if( ${NUMBER_OF_CPU} GREATER 31 )
+        set( _p 4 )
+        set( _q 4 )
+    elseif( ${NUMBER_OF_CPU} GREATER 7 )
+        set( _p 2 )
+        set( _q 2 )
+    else()
+        set( _p 1 )
+        set( _q 1 )
+    endif()
 endif()
 math( EXPR _pq "${_p} * ${_q}" )
 
 # Add basic tests. To run them type: 'make test' in build directory
-add_test( NAME "timing_pdgesvd:A" COMMAND mpirun -np ${_pq} timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwmr )
-add_test( NAME "timing_pdgesvd:B" COMMAND mpirun -np ${_pq} timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwdc )
-add_test( NAME "timing_pdgesvd:C" COMMAND mpirun -np ${_pq} timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwel )
+add_test( NAME "timing_pdgesvd:QDWH-MR" COMMAND mpirun -np ${_pq} ./timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwmr )
+add_test( NAME "timing_pdgesvd:QDWH-DC" COMMAND mpirun -np ${_pq} ./timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwdc )
+add_test( NAME "timing_pdgesvd:QDWH-EL" COMMAND mpirun -np ${_pq} ./timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwel --polarqdwh )
+add_test( NAME "timing_pdgesvd:ZOLOPD-MR" COMMAND mpirun -np ${_pq} ./timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwmr --polarzolopd )
+add_test( NAME "timing_pdgesvd:ZOLOPD-DC" COMMAND mpirun -np ${_pq} ./timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwdc --polarzolopd )
+add_test( NAME "timing_pdgesvd:ZOLOPD-EL" COMMAND mpirun -np ${_pq} ./timing_pdgesvd --nprow ${_p} --npcol ${_q} --nb 64 --n_range 512:512:512 --niter 3 --check --qwel --polarzolopd )
