--- a/ksvd.pc.in
+++ b/ksvd.pc.in
@@ -6,4 +6,4 @@ Description:
 Version: @KSVD_VERSION@
 URL: http://github.com/ecrc/ksvd
 Libs: -L${libdir} -lksvd
-Requires: mpi scalapack elpa qdwh
+Requires: mpi scalapack elpa polar
